# universal-hashes

poly1305/: Cargo.toml
poly1305/benches/: poly1305.rs
poly1305/src/: backend.rs
poly1305/src/backend/: avx2.rs
