[package]
name = "poly1305"
version = "0.6.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = "The Poly1305 universal hash function and message authentication code"
documentation = "https://docs.rs/poly1305"
repository = "https://github.com/RustCrypto/universal-hashes"
keywords = ["crypto", "mac", "umac", "universal-hashing"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
universal-hash = { version = "0.4", default-features = false }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.3.3"
criterion-cycles-per-byte = "0.1.1"
hex-literal = "0.2"

[features]
autodetect = ["std"]
std = ["universal-hash/std"]

[[bench]]
name = "poly1305"
harness = false
